@@ -10,7 +10,6 @@ declare(strict_types=1);
 namespace SimpleComplex\Validate;
 
 use Psr\Log\LoggerInterface;
-use SimpleComplex\Utils\Traits\GetInstanceOfFamilyTrait;
 use SimpleComplex\Utils\Unicode;
 use SimpleComplex\Validate\Exception\InvalidArgumentException;
 use SimpleComplex\Validate\Exception\BadMethodCallException;
@@ -56,14 +55,28 @@ use SimpleComplex\Validate\Exception\BadMethodCallException;
 class Validate implements RuleProviderInterface
 {
     /**
-     * @see \SimpleComplex\Utils\Traits\GetInstanceOfFamilyTrait
+     * Reference to first object instantiated via the getInstance() method,
+     * no matter which parent/child class the method was/is called on.
      *
-     * First object instantiated via this method, disregarding class called on.
-     * @public
-     * @static
-     * @see \SimpleComplex\Utils\Traits\GetInstanceOfFamilyTrait::getInstance()
+     * @var Validate
      */
-    use GetInstanceOfFamilyTrait;
+    protected static $instance;
+
+    /**
+     * First object instantiated via this method, disregarding class called on.
+     *
+     * @param mixed ...$constructorParams
+     *
+     * @return Validate
+     *      static, really, but IDE might not resolve that.
+     */
+    public static function getInstance(...$constructorParams)
+    {
+        if (!static::$instance) {
+            static::$instance = new static(...$constructorParams);
+        }
+        return static::$instance;
+    }
 
     /**
      * For logger 'type' context; like syslog RFC 5424 'facility code'.
